tests/test_files_pa3/external/errors/SameIDinExtendingError.ic
// The following code is illegal since the same identifier (foo) 
// appears both in the scope of the class A and in the scope of the 
// class B, which inherits from A:

class A {
	
	int foo;

	static void main(string[] args){}
}



class B extends A {
	
	void foo() {}

}